# pix

./: README.md
.github/workflows/: ci.yml  docs.yml  extension.yml  playground.yml  release.yml  version.yml
compiler/: .gitignore  Cargo.toml
compiler/source/: lib.rs  main.rs
compiler/source/color/: mod.rs  palette.rs
compiler/source/color/tests/: palette.rs
compiler/source/evaluator/: evaluate.rs  instruction.rs  mod.rs  shapes.rs
compiler/source/evaluator/tests/: errors.rs  expressions.rs  mod.rs  programs.rs  shapes.rs
compiler/source/exporter/: export.rs  mod.rs
compiler/source/exporter/tests/: export.rs
compiler/source/language_server/: completion.rs  main.rs  mod.rs  server.rs
compiler/source/language_server/tests/: completion.rs
compiler/source/lexer/: mod.rs  scanner.rs  token.rs
compiler/source/lexer/tests/: comments.rs  delimiters.rs  hexadecimal_colors.rs  keywords.rs  mod.rs  numbers.rs  operators.rs  position.rs  strings.rs  unrecognized_token.rs
compiler/source/parser/: ast.rs  mod.rs  parse.rs
compiler/source/parser/tests/: clear.rs  color_block.rs  copy.rs  draw.rs  erase.rs  export.rs  expressions.rs  frame.rs  grid.rs  layer.rs  mirror.rs  mod.rs  movement.rs  program.rs  shapes.rs
compiler/source/renderer/: mod.rs  render.rs
compiler/source/renderer/tests/: render.rs
documentation/: .gitignore  .npmrc  astro.config.mjs  package-lock.json  package.json
notes/: 0.1.0.md
tools/extension/: .gitignore  .vscodeignore  LICENSE  package-lock.json  package.json  tsconfig.json
tools/playground/: .gitignore  Dockerfile  (+6 more)
(+32 files in other folders)
