[package]
name = "pix"
version = "0.1.0"
edition = "2024"

[lib]
path = "source/lib.rs"
[[bin]]
name = "pix"
path = "source/main.rs"

[[bin]]
name = "pix-language-server"
path = "source/language_server/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "webp", "gif"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
